--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,52 @@ body {
 
 .header {
   grid-column: 2;
+  display: grid;
+  grid-template-rows: 3fr 4fr;
 }
 
 .sidebar {
   grid-row: 1 / 3;
+}
+
+.header .upper {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
+
+.search {
+  padding: 25px 50px;
+  display: grid;
+  align-items: center;
+}
+
+.search form{
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 15px;
+}
+
+.search img {
+  height: 30px;
+}
+
+.search input {
+  font-size: 1rem;
+}
+
+.user-info {
+  padding: 0 50px;
+  display: grid;
+  align-items: center;
+  grid-template-columns: auto auto 1fr;
+  gap: 15px;
+}
+
+.user-info img {
+  height: 30px;
+}
+
+button {
+  display: grid;
+  place-content: center;
 }
