--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  background-color: #eef2ff;
   height: 100vh;
   display: grid;
   grid-template-columns: 1fr 4fr;
@@ -15,10 +16,6 @@ body {
   grid-column: 2;
   display: grid;
   grid-template-rows: 3fr 4fr;
-}
-
-.sidebar {
-  grid-row: 1 / 3;
 }
 
 .header .upper {
@@ -88,6 +85,80 @@ body {
 }
 
 .greetings div {
+  justify-self: start;
+}
+
+.sidebar {
+  background-color: #312e81;
+  grid-row: 1 / 3;
+  display: grid;
+  grid-template-rows: 1fr 6fr 3fr 6fr;
+}
+
+.logo {
+  padding: 25px 15px;
+  display: grid;
+}
+
+.logo button {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 10px;
+}
+
+.logo img {
+  height: 40px;
+}
+
+.logo p {
+  font-size: 1.5rem;
+  justify-self: start;
+}
+
+.sidebar .upper {
+  padding: 25px 15px;
+  display: grid;
+  grid-template-rows: repeat(6, min(1fr, 40px));
+  gap: 10px;
+}
+
+.sidebar .upper button {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 10px;
+}
+
+.sidebar .upper img {
+  height: 30px;
+}
+
+.sidebar .upper p {
+  font-size: 1.25rem;
+  justify-self: start;
+}
+
+.sidebar .lower {
+  padding: 25px 15px;
+  display: grid;
+  grid-template-rows: repeat(4, min(1fr, 40px));
+  gap: 10px;
+}
+
+.sidebar .lower button {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 10px;
+}
+
+.sidebar .lower img {
+  height: 30px;
+}
+
+.sidebar .lower p {
+  font-size: 1.25rem;
   justify-self: start;
 }
 
