--- a/styles.css
+++ b/styles.css
@@ -177,7 +177,6 @@ body {
 .trending {
   display: grid;
   grid-template-rows: auto 1fr;
-  gap: 15px;
 }
 
 .trending p {
@@ -206,6 +205,59 @@ body {
 
 .users button p {
   font-size: 1rem;
+}
+
+.announcements {
+  display: grid;
+  grid-template-rows: auto 1fr;
+}
+
+.announcements .title {
+  font-size: 1.25rem;
+}
+
+.announcements .outer {
+  background-color: #eef2ff;
+  padding: 30px;
+  display: grid;
+  grid-template-rows: 1fr;
+  align-content: center;
+}
+
+.announcements .contents {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  align-items: center;
+}
+
+.item {
+  padding: 7px 0;
+  display: grid;
+  align-content: center;
+  grid-template-rows: auto 1fr;
+  border-bottom: 1px solid black;
+}
+
+.item:first-child {
+  padding-top: 0;
+  align-self: end;
+}
+
+.item:last-child {
+  align-self: start;
+  padding-bottom: 0;
+  border-bottom: none;
+}
+
+.item button {
+  justify-self: start;
+  align-self: end;
+  font-size: 1rem;
+}
+
+.item > p {
+  font-size: .9rem;
+  align-self: start;
 }
 
 button {
