--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,22 @@
   font-family: 'Anek Latin', sans-serif;
 }
 
+button {
+  display: grid;
+  place-content: center;
+}
+
+a {
+  text-decoration: none;
+  display: grid;
+  place-content: center;
+}
+
 body {
   background-color: #e0e7ff;
   height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 1fr 5fr;
   grid-template-rows: 1fr 5fr;
 }
 
@@ -92,20 +103,35 @@ body {
   justify-self: start;
 }
 
+.username {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
 .sidebar {
+  padding: 30px;
   background-color: #6366f1;
   grid-row: 1 / 3;
   display: grid;
   grid-template-rows: 1fr 6fr 3fr 6fr;
+  gap: 30px;
+  justify-content: center;
+}
+
+.sidebar img[src*=".svg"] {
+  filter: invert(99%) sepia(66%) saturate(0%) hue-rotate(81deg) brightness(112%) contrast(100%);
+}
+
+.sidebar p {
+  color: white;
+  font-weight: bold;
 }
 
 .logo {
-  padding: 25px 15px;
   display: grid;
 }
 
-.logo button {
-  display: grid;
+.logo a {
   grid-template-columns: auto 1fr;
   align-items: center;
   gap: 10px;
@@ -116,23 +142,21 @@ body {
 }
 
 .logo p {
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: bold;
   justify-self: start;
 }
 
 .sidebar .upper {
-  padding: 25px 15px;
   display: grid;
   grid-template-rows: repeat(6, min(1fr, 40px));
   gap: 10px;
 }
 
-.sidebar .upper button {
-  display: grid;
+.sidebar .upper a {
   grid-template-columns: auto 1fr;
   align-items: center;
-  gap: 10px;
+  gap: 20px;
 }
 
 .sidebar .upper img {
@@ -145,17 +169,15 @@ body {
 }
 
 .sidebar .lower {
-  padding: 25px 15px;
   display: grid;
   grid-template-rows: repeat(4, min(1fr, 40px));
   gap: 10px;
 }
 
-.sidebar .lower button {
-  display: grid;
+.sidebar .lower a {
   grid-template-columns: auto 1fr;
   align-items: center;
-  gap: 10px;
+  gap: 20px;
 }
 
 .sidebar .lower img {
@@ -317,14 +339,4 @@ body {
 .item > p {
   font-size: .9rem;
   align-self: start;
-}
-
-button {
-  display: grid;
-  place-content: center;
-}
-
-.username {
-  font-size: 1.5rem;
-  font-weight: bold;
 }
