--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 * {
   margin: 0;
   padding: 0;
-  outline: 1px solid black;
+  /* outline: 1px solid black; */
   font-family: 'Anek Latin', sans-serif;
 }
 
@@ -110,7 +110,7 @@ body {
 
 .sidebar {
   padding: 30px;
-  background-color: #6366f1;
+  background-color: #4338ca;
   grid-row: 1 / 3;
   display: grid;
   grid-template-rows: 1fr 6fr 3fr 6fr;
@@ -192,7 +192,7 @@ body {
 .main-content {
   padding: 30px;
   display: grid;
-  grid-template-columns: 5fr 2fr;
+  grid-template-columns: 3.5fr 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 30px;
 }
@@ -259,7 +259,6 @@ body {
 
 .trending p {
   font-size: 1.25rem;
-  font-weight: bold;
 }
 
 .users {
@@ -269,21 +268,29 @@ body {
   align-content: space-between;
 }
 
-.users button {
-  display: grid;
+.users a {
   grid-template-columns: auto 1fr;
   column-gap: 25px;
   justify-items: start;
   align-items: center;
 }
 
-.users button img {
+.users a img {
   height: 50px;
   grid-row: 1 / 3;
 }
 
-.users button p {
+.users a .handle {
+  font-weight: 500;
+}
+
+.users a p {
   font-size: 1rem;
+  color: black;
+}
+
+.users a p:last-child {
+  color: #818cf8;
 }
 
 .announcements {
