--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ body {
 
 .sidebar {
   padding: 30px;
-  background-color: #4338ca;
+  background-color: var(--color-8);
   grid-row: 1 / 3;
   display: grid;
   grid-template-rows: 1fr 6fr 3fr 6fr;
@@ -133,7 +133,7 @@ body {
 }
 
 .sidebar a:not(.no-hover):hover {
-  background-color: #4f46e5;
+  background-color: var(--color-7);
 }
 
 .sidebar img[src*=".svg"] {
@@ -243,7 +243,7 @@ body {
 }
 
 .card .dash {
-  background-color: #312e81;
+  background-color: var(--color-10);
 }
 
 .card .content {
@@ -314,7 +314,7 @@ body {
 }
 
 .users a p:last-child {
-  color: #818cf8;
+  color: var(--color-6);
 }
 
 .announcements {
