Update card buttons' CSS
Removed background.

Removed border.

Changed background color on hover.

Replaced share icon.

--- a/styles.css
+++ b/styles.css
@@ -269,8 +269,18 @@ body {
   gap: 20px;
 }
 
+.content button {
+  border-radius: 8px;
+  background: none;
+  border: none;
+}
+
+.content button:hover {
+  background-color: var(--color-2)
+}
+
 .content button img {
-  height: 30px;
+  height: 40px;
 }
 
 .trending {
