Update the buttons' CSS on the lower header
Changed background color.

Changed font color.

Added hover effects.

Removed border.

Added border radius.

--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,20 @@ body {
   gap: 50px;
 }
 
+.actions button {
+  font-size: 1.25rem;
+  font-weight: bold;
+  color: white;
+  background-color: var(--color-7);
+  border: none;
+  border-radius: 20px;
+}
+
+.actions button:hover {
+  background-color: var(--color-6);
+  box-shadow: var(--shadow);
+}
+
 .greetings {
   font-weight: 600;
   padding: 0 50px;
