Add border radius to sidebar links

--- a/styles.css
+++ b/styles.css
@@ -186,6 +186,7 @@ body {
 
 .sidebar a:not(.no-hover):hover {
   background-color: var(--color-7);
+  border-radius: 8px;
 }
 
 .sidebar img[src*=".svg"] {
