--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ body {
 }
 
 .actions {
-  padding: 35px 50px;
+  padding: 30px 50px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 50px;
@@ -272,6 +272,7 @@ body {
   grid-row: 1 / 3;
   display: grid;
   grid-template-rows: auto 1fr;
+  row-gap: 2px;
 }
 
 .projects .title {
@@ -340,6 +341,7 @@ body {
 .trending {
   display: grid;
   grid-template-rows: auto 1fr;
+  row-gap: 2px;
 }
 
 .trending > p {
@@ -384,6 +386,7 @@ body {
 .announcements {
   display: grid;
   grid-template-rows: auto 1fr;
+  row-gap: 2px;
 }
 
 .announcements .title {
